# molli-DSI-TS

./: README.md  setup.py
data/: note
data/descriptors/: GFN1-GFN2_dist-int.xlsx  Int-E_validation.xlsx  dist-int_descriptor_GFF.xlsx
data/model/: OHE_models.xlsx  data_models.xlsx
dftd3/: dftd3.py
generic_multiproc/: .__init__.py.swp  __init__.py  generic_multiproc.py
library_generation_example/: multixyz.xyz  rdkitlibgentest.py
library_generation_example/fragment_mol2/: obabel_ClC#Cc1ccc_CC_cc1_tmp.xyz_to.mol2
library_generation_example/libgen/: BASE_TS_R-ax-S_2a.mol2_obabel.mol  BASE_TS_R-ax-S_2a.mol2_obabel_ClC#Cc1ccc_CC_cc1_tmp.xyz_to.mol2_obabel.mol  BASE_TS_R-ax-S_2a.mol2_obabel_ClC#Cc1ccc_CC_cc1_tmp.xyz_to.mol2_obabel.mol_obabel.mol  BASE_TS_R-ax-S_2a.mol2_obabel_ClC#Cc1ccc_CC_cc1_tmp.xyz_to.mol2_original.mol_obabel.mol  R-ax-S_2a.mol2_GFF_structure_gen.xyz  R-ax-S_2a.mol2_angle_checks  R-ax-S_2a.mol2_atom_fragment_labels.csv  R-ax-S_2a.mol2_molecule_energies.csv  __ini_libgen.py  __ini_libgen.py_5-6-2025_backup  (+7 more)
libtest2/: BASE_TS_PD_TEST.mol2  multixyz.xyz  rdkitlibgentest_new.py  substituents.csv
molli/: __init__.py
nboparse/: __init__.py  nboparse.py
nbotools/: README.md  pyproject.toml  setup.py
nbotools/nbotools/: nboparse.py
nbotools/nbotools.egg-info/: SOURCES.txt  top_level.txt
nbotools/nbotools/examples/: orcaoutput_1.out  orcaoutput_2.out  output_dump
substructure/: README.md  pyproject.toml  setup.py
substructure/nbotools.egg-info/: PKG-INFO  SOURCES.txt
substructure/substructure.egg-info/: PKG-INFO  SOURCES.txt
(+290 files in other folders)
