[project]
name = "substructure"
version = "0.1.0"
description = "additional tools to modify substructures"
authors = [{ name="Karnjit Parmar", email="ksparmar@illinois.edu"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "rdkit"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
